--- a/index.html
+++ b/index.html
@@ -9,5 +9,23 @@
     <h1> Hello world
         <p> how are you</p>
     </h1>
+
+    <strong>OTC Pain meds</strong><br>
+<form action="">
+<input class="instruction" type="checkbox" name="instruction" value="&lt;b&gt;-For mild pain:&lt;/b&gt;">For mild pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Tylenol (acetaminophen) 1-2 pills (500-1000 mg) every 6-8 hours. Take no more than 8 pills (4000 mg) in 24 hours ">Tylenol 500/1000<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Motrin (ibuprofen) 400 mg (two 200 mg tablets) or Tylenol (acetaminophen) 500 mg every 6-8 hours. ">Motrin 400 or Tylenol 500<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="&lt;b&gt;-For severe pain:&lt;/b&gt;">For severe pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Motrin (ibuprofen) 800 mg (four 200 mg tablets) and Tylenol (acetaminophen) 1000 mg (two 500 mg tablets) every 6-8 hours. You can safely take Motrin and Tylenol together if the pain is severe. ">Motrin 800/ Tylenol 1000<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Aleve (naproxen) 500 mg (two 250 mg tablets) every 12 hours. Take with food and do not take with Motrin (ibuprofen). ">Aleve 500<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Toradol 10 mg every 4-6 hours. You can take up to 40 mg in 24 hours. Take with food. Do not take with Motrin. ">Toradol 10<br>
+
+</form>
 </body>
 </html>
