--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> Hello world
-        <p> how are you</p>
+    <h1> HWelcome
     </h1>
 
     <strong>OTC Pain meds</strong><br>
