--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> HWelcome
-    </h1>
+    <nav>
+        <a href="index.html">Home</a> | <a href="about.html">About</a>
+    </nav>
+    <h1>Welcome</h1>
 
     <strong>OTC Pain meds</strong><br>
 <form action="">
