Add About button and styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <nav>
         <a href="index.html">Home</a> | <a href="about.html">About</a>
     </nav>
+    <div class="actions">
+        <button id="about-btn" type="button" onclick="window.location.href='about.html'" aria-label="About page">About this site</button>
+    </div>
     <h1>Welcome</h1>
 
     <strong>OTC Pain meds</strong><br>
