Add Rx Pain Meds checkbox options

--- a/index.html
+++ b/index.html
@@ -31,7 +31,28 @@
 <input class="instruction" type="checkbox" name="instruction" value="Take Toradol 10 mg every 4-6 hours. You can take up to 40 mg in 24 hours. Take with food. Do not take with Motrin. ">Toradol 10<br>
 
 </form>
-        <div id="instruction-label" class="instruction-label" aria-live="polite" role="status"></div>
+    <span style="font-weight: 700;">Rx Pain Meds</span><br>
+<form action="">
+
+<input class="instruction" type="checkbox" name="instruction" value="&lt;b&gt;-For mild pain:&lt;/b&gt;">For mild pain<br>
+
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Robaxin (methocarbamol) 1500 mg (two 750 mg tablets) every 6-8 hours a needed for pain up to three days.">Robaxin<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="take Flexeril (cyclobenzaprine) 5-10 mg (one or two 5 mg tablets) three times a day as needed for pain.">Flexeril<br>
+<input class="instruction" type="checkbox" name="instruction" value="take Gabapentin 1 pill (300 mg) up to three times a day as needed for pain.">Gabapentin<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="take Flexeril (cyclobenzaprine) 5-10 mg (one or two 5 mg tablets) three times a day as needed for pain.">Flexeril<br>
+<input class="instruction" type="checkbox" name="instruction" value="Use a numbing patch called Lidoderm (lidocaine) patches by applying it to the painful area. You can buy the 4% patches over the counter where you buy medications.  They average $1 per patch.  &lt;br&gt;You should put them on in the morning and leave them on for 12 hours, then you need a 12 hour break.  You should never cut them, or use more than 2 at any time.  If you start feeling light headed, nausea or racing heart, please take the patch off and go to the nearest Emergency Department.">Lidoderm<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="&lt;b&gt;-For severe pain:&lt;/b&gt;">For severe pain<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="Take Tylenol 3 (acetaminophen/codeine) every 6-8 hours as needed. DO NOT take with alcohol or other Tylenol containing medicines.">Tylenol 3<br>
+
+<input class="instruction" type="checkbox" name="instruction" value="take Norco (acetaminophen/hydrocodone) every 6-8 hours as needed. DO NOT take with alcohol or other Tylenol containing medicines.">Norco<br>
+</form>
+
+    <div id="instruction-label" class="instruction-label" aria-live="polite" role="status"></div>
 
         <script>
             (function(){
