Add fixed top navigation and styles

--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="index.html">Home</a> | <a href="about.html">About</a>
-    </nav>
+    <header class="topnav">
+        <div class="nav-inner">
+            <a class="nav-brand" href="index.html">NinjaText</a>
+            <nav class="nav-links">
+                <a href="index.html">Instructions</a>
+                <a href="home.html">Home</a>
+            </nav>
+        </div>
+    </header>
     <div class="actions">
         <button id="copy-btn" type="button" onclick="copyInstructionLabel()" aria-label="Copy selected instructions">Copy</button>
     </div>
-    <h1>Welcome</h1>
+    <h1>Discharge Instructions</h1>
 
     <strong>OTC Pain meds</strong><br>
 <form action="">
