Replace index with minimal hello world page

--- a/index.html
+++ b/index.html
@@ -1,60 +1,16 @@
+<!doctype html>
 <html lang="en">
-<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>NinjaText — Launch</title>
-		<link rel="stylesheet" href="styles.css">
-		<style>
-			/* small extra layout for the launch page */
-			.launch {
-				max-width: 980px;
-				margin: 120px auto 40px; /* account for fixed header */
-				padding: 0 16px;
-				color: #fff;
-			}
-			.cards { display:flex; gap:16px; flex-wrap:wrap; }
-			.card { background: rgba(255,255,255,0.04); padding:20px; border-radius:8px; min-width:200px; text-align:center; }
-			.card a { color: #fff; text-decoration:none; font-weight:700; }
-		</style>
-</head>
-<body>
-		<header class="topnav">
-				<div class="nav-inner">
-						<a class="nav-brand" href="home.html">NinjaText</a>
-						<nav class="nav-links">
-								<a href="instructions.html">Instructions</a>
-								<a href="home.html">Home</a>
-						</nav>
-				</div>
-		</header>
-
-		<main class="launch">
-			<label id="welcome-label" class="welcome-label">Welcome to Ninja Text</label>
-			<h1>Welcome to NinjaText</h1>
-			<p>Your quick launch pad for discharge instructions and reference.</p>
-
-			<div class="launch-buttons">
-				<a class="launch-btn" href="discharge-instructions.html">Discharge Instructions</a>
-				<a class="launch-btn" href="return-precautions.html">Return Precautions</a>
-			</div>
-
-			<div class="cards">
-				<div class="card">
-					<a href="instructions.html">Open Instructions</a>
-					<div style="margin-top:8px;font-size:13px;opacity:.85">Select items and copy for patient instructions</div>
-				</div>
-
-				<div class="card">
-					<a href="home.html">Open Home</a>
-					<div style="margin-top:8px;font-size:13px;opacity:.85">General site home and info</div>
-				</div>
-
-				<div class="card">
-					<a href="https://github.com/tterlizzese-del/ninjatext">View Repo</a>
-					<div style="margin-top:8px;font-size:13px;opacity:.85">Source on GitHub</div>
-				</div>
-			</div>
-		</main>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>hello</title>
+    <style>
+      body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; }
+      p { font-size:24px; }
+    </style>
+  </head>
+  <body>
+    <p>hello world</p>
+  </body>
 </html>
 
