Style: add global styles and centered Welcome heading

--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>hello</title>
-    <style>
-      body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; }
-      p { font-size:24px; }
-    </style>
+    <title>NinjaText</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>hello world</p>
+    <header class="topnav">
+      <div class="nav-inner">
+        <a class="nav-brand" href="#">NinjaText</a>
+        <nav class="nav-links"></nav>
+      </div>
+    </header>
+
+    <main class="welcome-container">
+      <h1>Welcome to NinjaText</h1>
+    </main>
   </body>
 </html>
 
