Add Instructions and Precautions pages and header links

--- a/instructions.html
+++ b/instructions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>NinjaText</title>
+    <title>Instructions — NinjaText</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -19,14 +19,7 @@
     </header>
 
     <main class="welcome-container">
-      <div>
-        <h1>Welcome to NinjaText</h1>
-        <div style="margin-top:18px; display:flex; gap:12px; justify-content:center;">
-          <a class="launch-btn" href="instructions.html">Instructions</a>
-          <a class="launch-btn" href="precautions.html">Precautions</a>
-        </div>
-      </div>
+      <h1>Instructions</h1>
     </main>
   </body>
 </html>
-
