Move page labels into topnav brand and remove centered headings

--- a/precautions.html
+++ b/precautions.html
@@ -9,7 +9,7 @@
   <body>
     <header class="topnav">
       <div class="nav-inner">
-        <a class="nav-brand" href="index.html">NinjaText</a>
+        <a class="nav-brand" href="index.html">NinjaText | Precautions</a>
         <nav class="nav-links">
           <a href="index.html">Home</a>
           <a href="instructions.html">Instructions</a>
@@ -18,8 +18,8 @@
       </div>
     </header>
 
-    <main class="welcome-container">
-      <h1>Precautions</h1>
+    <main class="page">
+      <!-- Page content goes here -->
     </main>
   </body>
 </html>
