Instructions: add five-column checkbox layout and styles

--- a/instructions.html
+++ b/instructions.html
@@ -19,7 +19,72 @@
     </header>
 
     <main class="page">
-      <!-- Page content goes here -->
+      <div class="columns">
+        <!-- Column 1: OTC meds, RX meds, Antiemetics -->
+        <div class="column">
+          <div class="section">
+            <strong>OTC Meds</strong>
+            <form id="otc-form"><!-- paste OTC checkboxes here --></form>
+          </div>
+
+          <div class="section">
+            <strong>RX Meds</strong>
+            <form id="rx-form"><!-- paste RX checkboxes here --></form>
+          </div>
+
+          <div class="section">
+            <strong>Antiemetics</strong>
+            <form id="antiemetics-form"><!-- paste Antiemetics checkboxes here --></form>
+          </div>
+        </div>
+
+        <!-- Column 2: Antimicrobials -->
+        <div class="column">
+          <div class="section">
+            <strong>Antimicrobials</strong>
+            <form id="antimicrobials-form"><!-- paste Antimicrobials checkboxes here --></form>
+          </div>
+        </div>
+
+        <!-- Column 3: Antihistamines/Steroids, Cough/Cold/Asthma, Other Meds -->
+        <div class="column">
+          <div class="section">
+            <strong>Antihistamines / Steroids</strong>
+            <form id="antihistamines-form"><!-- paste Antihistamines/Steroids checkboxes here --></form>
+          </div>
+
+          <div class="section">
+            <strong>Cough / Cold / Asthma</strong>
+            <form id="cough-form"><!-- paste Cough/Cold/Asthma checkboxes here --></form>
+          </div>
+
+          <div class="section">
+            <strong>Other Meds</strong>
+            <form id="other-meds-form"><!-- paste Other Meds checkboxes here --></form>
+          </div>
+        </div>
+
+        <!-- Column 4: Medication Precautions, Pediatric Meds -->
+        <div class="column">
+          <div class="section">
+            <strong>Medication Precautions</strong>
+            <form id="precautions-form"><!-- paste Medication Precautions checkboxes here --></form>
+          </div>
+
+          <div class="section">
+            <strong>Pediatric Meds</strong>
+            <form id="pediatric-form"><!-- paste Pediatric Meds checkboxes here --></form>
+          </div>
+        </div>
+
+        <!-- Column 5: Wound Care -->
+        <div class="column">
+          <div class="section">
+            <strong>Wound Care</strong>
+            <form id="woundcare-form"><!-- paste Wound Care checkboxes here --></form>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
