--- a/instructions.html
+++ b/instructions.html
@@ -86,8 +86,8 @@
         <!-- Column 2: Antimicrobials -->
         <div class="column">
           <div class="section">
-            <strong>Antimicrobials</strong>
             <form id="antimicrobials-form">
+          <span style="font-weight: 700;">Antimicrobials</span><br>
 <span style="font-weight: 700;">Antimicrobials</span><br>
 <u>Systemic</u><br>
 
@@ -145,8 +145,8 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
         <!-- Column 3: Antihistamines/Steroids, Cough/Cold/Asthma, Other Meds -->
         <div class="column">
           <div class="section">
-            <strong>Antihistamines / Steroids</strong>
             <form id="antihistamines-form">
+          <span style="font-weight: bold;">Antihistamines/Steroids</span><br>
 <span style="font-weight: bold;">Antihistamines/Steroids</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Take Benadryl (diphenhydramine) 25 mg every 4 to 6 hours as needed for itching. You can take up to 50 mg (two tablets) if needed.">Benadryl prn<br>
 
@@ -165,8 +165,8 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
           </div>
 
           <div class="section">
-            <strong>Cough / Cold / Asthma</strong>
             <form id="cough-form">
+          <span style="font-weight: bold;">Cough/Cold/Asthma</span><br>
 <span style="font-weight: bold;">Cough/Cold/Asthma</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Use your albuterol inhaler by taking two puffs every 4-8 hours as needed for shortness of breath.">Albuterol<br>
 
@@ -188,8 +188,8 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
           </div>
 
           <div class="section">
-            <strong>Other Meds</strong>
             <form id="other-meds-form">
+          <span style="font-weight: 700;">Other Meds</span><br>
 <span style="font-weight: 700;">Other Meds</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Take Protonix (pantoprazole) 1 capsule (20 mg) every day for four weeks.">Protonix qd x 30d<br>
 
@@ -205,8 +205,8 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
         <!-- Column 4: Medication Precautions, Pediatric Meds -->
         <div class="column">
           <div class="section">
-            <strong>Medication Precautions</strong>
             <form id="precautions-form">
+          <span style="font-weight: 700;">Medication Precautions</span><br>
 <span style="font-weight: 700;">Medication Precautions</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Some of the medicines we gave you today may have made you tired. If this is the case.&lt;b&gt; DO NOT DRIVE YOURSELF HOME. DO NOT DRINK ALCOHOL OR TAKE SLEEPING MEDICINES until you feel back to normal. &lt;/b&gt; ">Sedating ED meds<br>
 
@@ -228,8 +228,8 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
           </div>
 
           <div class="section">
-            <strong>Pediatric Meds</strong>
             <form id="pediatric-form">
+          <span style="font-weight: 700;">Pediatric Meds</span><br>
 <span style="font-weight: 700;">Pediatric Meds</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Give *** mL (15 mg/kg) of acetaminophen (Tylenol) by mouth every 4–6 hours as needed for pain or fever for up to 72 hours, not to exceed 75 mg/kg/day or 4,000 mg/day. 
 ">Tylenol<br>
@@ -276,8 +276,8 @@ You can buy a tool called the NoseFrida to suction secretion from the nose. Inse
         <!-- Column 5: Wound Care -->
         <div class="column">
           <div class="section">
-            <strong>Wound Care</strong>
             <form id="woundcare-form">
+          <span style="font-weight: 700;">Wound care</span><br>
 <span style="font-weight: 700;">Wound care</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="&lt;br&gt;&lt;b&gt;Wound care&lt;/b&gt;&lt;br&gt;-Gently clean the area with tap water and soap daily, but avoid scrubbing.&lt;br&gt;-Do not use alcohol, hydrogen peroxide, or iodine on the wound, as these can slow healing. &lt;br&gt;-Watch for signs of infection: redness, swelling, pus, warmth, or increasing pain. If these occur, contact a healthcare provider.">General wound<br>
 
