Fix: remove extra gap after OTC Pain meds heading

--- a/instructions.html
+++ b/instructions.html
@@ -24,7 +24,7 @@
         <div class="column">
           <div class="section">
             <form id="otc-form">
-<strong>OTC Pain meds</strong><br>
+<strong class="no-gap">OTC Pain meds</strong>
 <input class="instruction" type="checkbox" name="instruction" value="&lt;b&gt;-For mild pain:&lt;/b&gt;">For mild pain<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="Take Tylenol (acetaminophen) 1-2 pills (500-1000 mg) every 6-8 hours. Take no more than 8 pills (4000 mg) in 24 hours ">Tylenol 500/1000<br>
@@ -163,7 +163,7 @@ mouth twice a day for 7 days.&nbsp;">Augmentin BID x7d<br>
 
           <div class="section">
             <form id="cough-form">>
-<span style="font-weight: bold;">Cough/Cold/Asthma</span><br>
+<span style="font-weight: bold;"Cough/Cold/Asthma</span><br>
 <input class="instruction" type="checkbox" name="instruction" value="Use your albuterol inhaler by taking two puffs every 4-8 hours as needed for shortness of breath.">Albuterol<br>
 
 <input class="instruction" type="checkbox" name="instruction" value="Use your inhaler by exhaling all the way, spraying a puff, inhaling, and holding your breath for 5 seconds. Repeat one more time.">Inhailer instructions<br>
